k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: flask-app
  template:
    metadata: 
      labels:
        app: flask-app
    spec: 
      containers:
        - name: flask-app
          image: 192.168.179.10:30500/flask-app:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /healthz      
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits: 
              cpu: 200m
              memory: 128Mi
